logs/Covid_dags/creatableLoad/2022-11-29T022322.874495+0000/1.log
[2022-11-29 02:23:30,477] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T02:23:22.874495+00:00 [queued]>
[2022-11-29 02:23:30,486] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T02:23:22.874495+00:00 [queued]>
[2022-11-29 02:23:30,486] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-11-29 02:23:30,486] {taskinstance.py:1244} INFO - Starting attempt 1 of 2
[2022-11-29 02:23:30,486] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-11-29 02:23:30,496] {taskinstance.py:1264} INFO - Executing <Task(PythonOperator): creatableLoad> on 2022-11-29 02:23:22.874495+00:00
[2022-11-29 02:23:30,500] {standard_task_runner.py:52} INFO - Started process 754 to run task
[2022-11-29 02:23:30,502] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'Covid_dags', 'creatableLoad', 'manual__2022-11-29T02:23:22.874495+00:00', '--job-id', '867', '--raw', '--subdir', 'DAGS_FOLDER/dbtest.py', '--cfg-path', '/tmp/tmpthxvhh2_', '--error-file', '/tmp/tmp0wnx71ja']
[2022-11-29 02:23:30,503] {standard_task_runner.py:77} INFO - Job 867: Subtask creatableLoad
[2022-11-29 02:23:30,547] {logging_mixin.py:109} INFO - Running <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T02:23:22.874495+00:00 [running]> on host acb48b0a6e0d
[2022-11-29 02:23:30,590] {taskinstance.py:1431} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=Covid_dags
AIRFLOW_CTX_TASK_ID=creatableLoad
AIRFLOW_CTX_EXECUTION_DATE=2022-11-29T02:23:22.874495+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-29T02:23:22.874495+00:00
[2022-11-29 02:23:30,606] {taskinstance.py:1718} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dbtest.py", line 128, in creatableLoad
    row.split(",")[10])
psycopg2.errors.SyntaxError: syntax error at or near "value"
LINE 3: ..."', '"0"', '"2"', '"2"', '"2"', '"0"', '"0"', '"{'value': 2}...
                                                             ^

[2022-11-29 02:23:30,616] {taskinstance.py:1282} INFO - Marking task as UP_FOR_RETRY. dag_id=Covid_dags, task_id=creatableLoad, execution_date=20221129T022322, start_date=20221129T022330, end_date=20221129T022330
[2022-11-29 02:23:30,627] {standard_task_runner.py:92} ERROR - Failed to execute job 867 for task creatableLoad
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dbtest.py", line 128, in creatableLoad
    row.split(",")[10])
psycopg2.errors.SyntaxError: syntax error at or near "value"
LINE 3: ..."', '"0"', '"2"', '"2"', '"2"', '"0"', '"0"', '"{'value': 2}...
                                                             ^

[2022-11-29 02:23:30,674] {local_task_job.py:154} INFO - Task exited with return code 1
[2022-11-29 02:23:30,699] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
